--- a/app/src/main/res/layout/business_button_order.xml
+++ b/app/src/main/res/layout/business_button_order.xml
@@ -64,7 +64,9 @@
             android:layout_height="48dp"
             android:background="?attr/selectableItemBackground"
             android:scaleType="fitCenter"
-            android:src="@drawable/business_ic_edit" />
+            android:src="@drawable/business_ic_edit"
+            android:layout_marginTop="10dp"
+            android:visibility="gone"/>
 
         <ImageButton
             android:id="@+id/search_button"
@@ -73,7 +75,8 @@
             android:layout_marginStart="16dp"
             android:background="?attr/selectableItemBackground"
             android:scaleType="fitCenter"
-            android:src="@drawable/business_ic_search" />
+            android:src="@drawable/business_ic_search"
+            android:layout_marginTop="10dp"/>
 
         <ImageButton
             android:id="@+id/add_button"
@@ -82,7 +85,8 @@
             android:layout_marginStart="16dp"
             android:background="?attr/selectableItemBackground"
             android:scaleType="fitCenter"
-            android:src="@drawable/business_ic_add" />
+            android:src="@drawable/business_ic_add"
+            android:layout_marginTop="10dp"/>
     </LinearLayout>
 
 </LinearLayout>
