--- a/app/src/main/res/layout/business_order_fragment_all_orders.xml
+++ b/app/src/main/res/layout/business_order_fragment_all_orders.xml
@@ -6,7 +6,7 @@
 
     <!-- Nội dung, ví dụ ListView -->
     <ListView
-        android:id="@+id/order_all_list"
+        android:id="@+id/lv_order_all"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@android:color/darker_gray"
