--- a/app/src/main/res/layout/business_order_item.xml
+++ b/app/src/main/res/layout/business_order_item.xml
@@ -6,11 +6,12 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
-    android:layout_marginTop="10dp">
+    android:layout_marginTop="10dp"
+    android:id="@+id/item_order">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lb_madonhang"
+        android:id="@+id/lb_order_madonhang"
         android:text="Mã đơn hàng"
         android:textStyle="bold"
         android:textSize="15dp"
@@ -22,35 +23,35 @@
         android:id="@+id/lb_sosanpham"
         android:text="Số sản phẩm: 0"
         android:layout_marginStart="40dp"
-        app:layout_constraintStart_toStartOf="@id/lb_madonhang"
-        app:layout_constraintTop_toBottomOf="@+id/lb_madonhang"/>
+        app:layout_constraintStart_toStartOf="@id/lb_order_madonhang"
+        app:layout_constraintTop_toBottomOf="@+id/lb_order_madonhang"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lb_tongsl"
+        android:id="@+id/lb_order_tongsl"
         android:text="Tổng số lượng: 0"
         app:layout_constraintStart_toStartOf="@id/lb_sosanpham"
         app:layout_constraintTop_toBottomOf="@+id/lb_sosanpham"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lb_tinhtrangtt"
+        android:id="@+id/lb_order_tinhtrangtt"
         android:text="Tình trạng thanh toán"
-        app:layout_constraintStart_toStartOf="@id/lb_madonhang"
-        app:layout_constraintTop_toBottomOf="@+id/lb_tongsl"/>
+        app:layout_constraintStart_toStartOf="@id/lb_order_madonhang"
+        app:layout_constraintTop_toBottomOf="@+id/lb_order_tongsl"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/l_tongtien"
+        android:id="@+id/lb_order_tongtien"
         android:text="Tổng tiền"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/lb_tinhtrangtt" />
+        app:layout_constraintBottom_toBottomOf="@id/lb_order_tinhtrangtt" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/date"
+        android:id="@+id/lb_order_date"
         android:text="DD/MM/YYYY"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/lb_madonhang"/>
+        app:layout_constraintTop_toTopOf="@id/lb_order_madonhang"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
