--- a/app/src/main/res/layout/business_button_product.xml
+++ b/app/src/main/res/layout/business_button_product.xml
@@ -21,8 +21,7 @@
         android:layout_weight="2"
         android:layout_marginTop="16dp"
         android:clipChildren="true"
-        android:gravity="right"
-        android:background="#2fc5bf">
+        android:gravity="right">
 
         <ImageButton
             android:id="@+id/edit_button"
