--- a/app/src/main/res/layout/business_button_report.xml
+++ b/app/src/main/res/layout/business_button_report.xml
@@ -2,70 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="0dp"
-    android:background="@drawable/business_background_gradient"
-    android:weightSum="5">
+    android:background="@drawable/business_background_gradient">
 
     <!-- TabLayout for Tabs -->
-    <!-- Combined Content Area with ListView -->
-
-
-    <!-- Bottom Action Buttons -->
-    <ListView
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="#2fc5bf"
-        android:clipChildren="true"
-        android:gravity="right"
-        android:layout_weight="4">
+        android:background="@color/white"
+        app:tabTextColor="@color/black">
 
-        <ImageButton
-            android:id="@+id/fragment_button"
-            android:layout_width="64dp"
-            android:layout_height="58dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="0dp"
-            android:background="?attr/selectableItemBackground"
-            android:scaleType="fitCenter"
-            android:src="@drawable/business_ic_edit" />
+    </com.google.android.material.tabs.TabLayout>
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2">
+        <!-- Horizontal ScrollView for Headers -->
 
-        <ImageButton
-            android:id="@+id/edit_button"
-            android:layout_width="64dp"
-            android:layout_height="58dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="10dp"
-            android:background="?attr/selectableItemBackground"
-            android:scaleType="fitCenter"
-            android:src="@drawable/business_ic_edit"
-            />
-
-        <ImageButton
-            android:id="@+id/search_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="10dp"
-            android:background="?attr/selectableItemBackground"
-            android:scaleType="fitCenter"
-            android:src="@drawable/business_ic_search" />
-
-        <ImageButton
-            android:id="@+id/add_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="10dp"
-            android:background="?attr/selectableItemBackground"
-            android:scaleType="fitCenter"
-            android:src="@drawable/business_ic_add" />
-    </LinearLayout>
+    </androidx.viewpager2.widget.ViewPager2>
+    <!-- Combined Content Area with ListView -->
 
 </LinearLayout>
