--- a/app/src/main/res/layout/business_fragment_home.xml
+++ b/app/src/main/res/layout/business_fragment_home.xml
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:orientation="horizontal"
-                android:background="@drawable/business_background_gradient"
+                android:background="@color/white"
                 android:layout_weight="1"
                 android:weightSum="2"
                 android:layout_marginTop="10dp">
@@ -39,6 +39,7 @@
                         android:layout_weight="1"
                         android:text="Đơn hàng"
                         android:textStyle="bold"
+                        android:textColor="@color/black"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,6 +49,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="32dp"
                         android:textStyle="bold"
+                        android:textColor="@color/black"
                         android:text="Chờ xử lý"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.496"
@@ -61,6 +63,7 @@
                         android:layout_marginTop="8dp"
                         android:text="0"
                         android:textSize="40dp"
+                        android:textColor="@color/black"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.496"
                         app:layout_constraintStart_toStartOf="parent"
@@ -76,12 +79,12 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="32dp"
                         android:textStyle="bold"
+                        android:textColor="@color/black"
                         android:text="Đang xử lý"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.496"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
-
                     </TextView>
                     <TextView
                         android:id="@+id/tv_numDang"
@@ -90,6 +93,7 @@
                         android:layout_marginTop="8dp"
                         android:text="10"
                         android:textSize="40dp"
+                        android:textColor="@color/black"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.496"
                         app:layout_constraintStart_toStartOf="parent"
@@ -118,6 +122,7 @@
                         android:layout_marginTop="16dp"
                         android:text="Tạm tính"
                         android:textStyle="bold"
+                        android:textColor="@color/black"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -127,9 +132,8 @@
                         android:layout_height="40dp"
                         android:background="@drawable/business_shape_green"
                         android:gravity="center"
-
-
                         android:text="Danh Thu: 0"
+                        android:textColor="@color/black"
                         app:layout_constraintEnd_toStartOf="@+id/tv_DonHang"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/tv_DonHang" />
@@ -141,6 +145,7 @@
                         android:background="@drawable/business_shape_red"
                         android:gravity="center"
                         android:text="Đơn hàng: 0"
+                        android:textColor="@color/black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -154,6 +159,7 @@
                         android:background="@drawable/business_shape_yellow"
                         android:gravity="center"
                         android:text="Lợi nhuận: 0"
+                        android:textColor="@color/black"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/tv_DonHang"
                         app:layout_constraintTop_toTopOf="@+id/tv_DonHang" />
@@ -204,6 +210,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
                         android:text="Đơn hàng"
+                        android:textColor="@color/black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.511"
@@ -236,6 +243,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
                         android:text="Sản phẩm"
+                        android:textColor="@color/black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.511"
@@ -267,6 +275,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
                         android:text="Nhà cung cấp"
+                        android:textColor="@color/black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.511"
@@ -301,6 +310,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
                         android:text="Kho hàng"
+                        android:textColor="@color/black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.511"
@@ -363,6 +373,7 @@
                         android:scaleType="fitCenter"
                         android:src="@drawable/business_ic_employee"
                         android:text="Nhan vien"
+                        android:textColor="@color/black"
                         app:layout_constraintBottom_toTopOf="@+id/tv_nhanvien"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -375,6 +386,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
                         android:text="Nhân viên"
+                        android:textColor="@color/black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.511"
@@ -405,6 +417,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:text="Thông báo"
+                    android:textColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.511"
@@ -437,6 +450,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:text="Cài đặt"
+                    android:textColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.511"
