--- a/app/src/main/res/layout/business_product_item.xml
+++ b/app/src/main/res/layout/business_product_item.xml
@@ -52,7 +52,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lb_product_masp"
+        android:id="@+id/tv_product_masp"
         android:text="Mã sản phẩm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/lb_product_tensp"/>
