--- a/app/src/main/res/layout/business_storage_item.xml
+++ b/app/src/main/res/layout/business_storage_item.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lb_storage_tensp"
+        android:id="@+id/tv_storage_tensp"
         android:text="Tên sản phẩm"
         android:textStyle="bold"
         android:textSize="15dp"
@@ -20,64 +20,64 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lb_storage_ncc"
-        android:text="Nhà cung cấp: "
+        android:id="@+id/tv_storage_ncc"
+        android:text="Nhà cung cấp "
         android:layout_marginStart="40dp"
-        app:layout_constraintStart_toStartOf="@id/lb_storage_tensp"
-        app:layout_constraintTop_toBottomOf="@+id/lb_storage_tensp"/>
+        app:layout_constraintStart_toStartOf="@id/tv_storage_tensp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_storage_tensp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lb_storage_phanloaisp"
+        android:id="@+id/tv_storage_phanloaisp"
         android:text="Phan loai"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/lb_storage_ncc"
+        app:layout_constraintTop_toTopOf="@id/tv_storage_ncc"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lb_storage_dongia"
+        android:id="@+id/tv_storage_dongia"
         android:text="Đơn giá: 0"
-        app:layout_constraintStart_toStartOf="@id/lb_storage_ncc"
-        app:layout_constraintTop_toBottomOf="@+id/lb_storage_ncc"/>
+        app:layout_constraintStart_toStartOf="@id/tv_storage_ncc"
+        app:layout_constraintTop_toBottomOf="@+id/tv_storage_ncc"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lb_storage_ngaynhap"
+        android:id="@+id/tv_storage_ngaynhap"
         android:text="Ngày nhập DD/MM/YYYY"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/lb_storage_dongia"/>
+        app:layout_constraintTop_toTopOf="@+id/tv_storage_dongia"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lb_storage_tonkho"
+        android:id="@+id/tv_storage_tonkho"
         android:text="Tồn kho: 0"
-        app:layout_constraintStart_toStartOf="@id/lb_storage_dongia"
-        app:layout_constraintTop_toBottomOf="@+id/lb_storage_dongia"/>
+        app:layout_constraintStart_toStartOf="@id/tv_storage_dongia"
+        app:layout_constraintTop_toBottomOf="@+id/tv_storage_dongia"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lb_storage_tinhtrangsp"
+        android:id="@+id/tv_storage_tinhtrangsp"
         android:text="Tình trạng sản phẩm"
-        app:layout_constraintStart_toStartOf="@id/lb_storage_tensp"
-        app:layout_constraintTop_toBottomOf="@+id/lb_storage_tonkho"/>
+        app:layout_constraintStart_toStartOf="@id/tv_storage_tensp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_storage_tonkho"/>
 
     <TextView
-        android:id="@+id/lb_storage_giatriton"
+        android:id="@+id/tv_storage_giatriton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Giá trị tồn: 0"
-        app:layout_constraintStart_toStartOf="@+id/lb_storage_ngaynhap"
-        app:layout_constraintTop_toBottomOf="@id/lb_storage_ngaynhap" />
+        app:layout_constraintStart_toStartOf="@+id/tv_storage_ngaynhap"
+        app:layout_constraintTop_toBottomOf="@id/tv_storage_ngaynhap" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lb_product_masp"
+        android:id="@+id/tv_product_masp"
         android:text="Mã sản phẩm"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/lb_storage_tensp"/>
+        app:layout_constraintTop_toTopOf="@id/tv_storage_tensp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
