--- a/app/src/main/res/layout/business_fragment_home.xml
+++ b/app/src/main/res/layout/business_fragment_home.xml
@@ -349,15 +349,16 @@
                         app:layout_constraintVertical_bias="0.0" />
 
                     <TextView
-                    android:id="@+id/tv_baocao"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:text="Báo cáo"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.511"
-                    app:layout_constraintStart_toStartOf="parent" />
+                        android:id="@+id/tv_baocao"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp"
+                        android:textColor="@color/black"
+                        android:text="Báo cáo"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.511"
+                        app:layout_constraintStart_toStartOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="0dp"
